--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
