--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "./frontend vite"
   },
   "author": "",
   "license": "ISC",
@@ -11,5 +11,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "concurrently": "^9.0.1"
   }
 }
