--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "frontend": "cd frontend && vite",
+    "backend": "cd backend && nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -11,5 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "vite": "^5.4.7"
   }
 }
